remove all bootstrap table styles, add our own, fix overflow #249

--- a/front/sass/base/globals.scss
+++ b/front/sass/base/globals.scss
@@ -8,6 +8,7 @@ body {
   font-family: $font-main;
   font-weight: 200;
   background: #f5f5f5;
+  color: $text;
 }
 
 h1,
