--- a/front/sass/components/box.scss
+++ b/front/sass/components/box.scss
@@ -12,6 +12,9 @@
     padding: 0.3em 0.8em;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+    a {
+      text-decoration: none;
+    }
   }
   .box_content {
     background: white;
