--- a/front/sass/service/profile.scss
+++ b/front/sass/service/profile.scss
@@ -1,12 +1,5 @@
 .service_users,
-.service_details {
-  a {
-    color: $color-blue;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
+.service_details {}
 
 .service_details {
   p {
